--- a/HoustonMesh.UI/Components/Pages/Home.razor
+++ b/HoustonMesh.UI/Components/Pages/Home.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Houston Mesh - Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h2>Houston Mesh - Home</h2>
 
-Welcome to your new app.
+<div class="card mb-3">
+    <div class="card-body">
+        <h4 class="card-title">Welcome to the Houston Mesh network home!</h4>
+        <h6 class="card-subtitle mb-2 text-muted">Site work currently in-progress...</h6>
+        <p class="card-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.
+        </p>
+        <p class="card-text">
+        Sed risus ultricies tristique nulla aliquet enim. Adipiscing diam donec adipiscing tristique risus nec feugiat. Id diam maecenas ultricies mi eget mauris. Mi bibendum neque egestas congue quisque. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Mattis enim ut tellus elementum sagittis vitae et leo. Habitasse platea dictumst vestibulum rhoncus est. Accumsan sit amet nulla facilisi. Sollicitudin aliquam ultrices sagittis orci. Dolor magna eget est lorem ipsum dolor. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Nulla aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Consectetur a erat nam at lectus urna duis convallis convallis. Nulla pellentesque dignissim enim sit amet venenatis urna.
+        </p>
+        <p class="card-text">
+            Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Pretium vulputate sapien nec sagittis aliquam malesuada. Tristique sollicitudin nibh sit amet commodo. Nibh venenatis cras sed felis eget velit aliquet. Tristique senectus et netus et malesuada fames. Sit amet nisl purus in mollis nunc sed id semper. Fermentum et sollicitudin ac orci phasellus egestas. Vitae sapien pellentesque habitant morbi. Lacus luctus accumsan tortor posuere. Eleifend donec pretium vulputate sapien nec. Eu sem integer vitae justo eget magna fermentum. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis. Ipsum dolor sit amet consectetur. Ultricies mi eget mauris pharetra. Aliquet eget sit amet tellus cras adipiscing enim eu. Id faucibus nisl tincidunt eget nullam non. Platea dictumst vestibulum rhoncus est pellentesque elit. Quis ipsum suspendisse ultrices gravida dictum fusce. Viverra justo nec ultrices dui sapien eget mi.
+        </p>
+    </div>
+</div>
+
+@code {
+
+}
