--- a/HoustonMesh.UI/Components/Pages/Setup.razor
+++ b/HoustonMesh.UI/Components/Pages/Setup.razor
@@ -2,14 +2,14 @@
 
 <PageTitle>Houston Mesh - Getting Started</PageTitle>
 
-<h2>Houston Mesh - Getting Started</h2>
+<h3>Getting Started</h3>
 
 <div class="card text-white bg-dark mb-3">
-    <div class="card-header">Meshtastic MQTT Setup</div>
+    <div class="card-header">Houston Mesh MQTT Channel Setup</div>
     <div class="card-body">
-        <h4 class="card-title">Dark card title</h4>
+        <h4 class="card-title"></h4>
         <p class="card-text">You can use these instructions to join the Houston Mesh MQTT Channel, for now:</p>
-        <a href="https://meshtastic.discourse.group/t/anyone-in-houston-tx/7614/62" target="_blank" class="card-link">Meshtastic MQTT Setup</a>
+        <a href="https://meshtastic.discourse.group/t/anyone-in-houston-tx/7614/62" target="_blank" class="card-link">Meshtastic MQTT Channel Setup Instructions</a>
     </div>
 </div>
 
