--- a/HoustonMesh.UI/Components/Layout/NavMenu.razor
+++ b/HoustonMesh.UI/Components/Layout/NavMenu.razor
@@ -4,7 +4,10 @@
             <NavLink class="navbar-brand" href="">
                 Houston Mesh
             </NavLink>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01" style="">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
