--- a/HoustonMesh.UI/Components/Layout/MainLayout.razor
+++ b/HoustonMesh.UI/Components/Layout/MainLayout.razor
@@ -5,12 +5,8 @@
         <NavMenu />
     </div>
     <main>
-        <article class="content ms-3">
-            <div class="row">
-                <div class="col-sm-6">
-                    @Body
-                </div>
-            </div>
+        <article class="content m-3">
+            @Body
         </article>
     </main>
 </div>
