--- a/HoustonMesh.UI/Components/Layout/NavMenu.razor
+++ b/HoustonMesh.UI/Components/Layout/NavMenu.razor
@@ -1,13 +1,14 @@
 ﻿<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <NavLink class="navbar-brand" href="">
                 Houston Mesh
             </NavLink>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarColor01" style="">
+
+            <div class="navbar-collapse collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
