Fix nav. Add some content.

--- a/HoustonMesh.UI/Components/Pages/About.razor
+++ b/HoustonMesh.UI/Components/Pages/About.razor
@@ -2,15 +2,16 @@
 
 <PageTitle>Houston Mesh - About Us</PageTitle>
 
-<h3>About Us</h3>
-
-<div class="card text-white bg-dark mb-3">
-    <div class="card-header">Who is Houston Mesh?</div>
-    <div class="card-body">
-        <h4 class="card-title"></h4>
-        <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.
-        </p>
+<div class="row">
+    <div class="col-xl-6">
+        <div class="card text-white bg-dark mb-3">
+            <div class="card-body">
+                <h4 class="card-title">Who is Houston Mesh?</h4>
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
