--- a/HoustonMesh.UI/Components/Layout/NavMenu.razor
+++ b/HoustonMesh.UI/Components/Layout/NavMenu.razor
@@ -1,32 +1,30 @@
-﻿<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="navbar navbar-expand-sm bg-primary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <NavLink class="navbar-brand" href="">
-                Houston Mesh
-            </NavLink>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+﻿<nav class="navbar navbar-expand-sm bg-primary" data-bs-theme="dark">
+    <div class="container-fluid">
+        <NavLink class="navbar-brand" href="">
+            Houston Mesh
+        </NavLink>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="navbar-collapse collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                            <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-                        </NavLink>
-                    </li>
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="setup">
-                            <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Getting Started
-                        </NavLink>
-                    </li>
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="about">
-                            <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> About Us
-                        </NavLink>
-                    </li>
-                </ul>
-            </div>
+        <div class="navbar-collapse collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="setup">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Getting Started
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="about">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> About Us
+                    </NavLink>
+                </li>
+            </ul>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
