--- a/HoustonMesh.UI/Components/Pages/Home.razor
+++ b/HoustonMesh.UI/Components/Pages/Home.razor
@@ -2,18 +2,23 @@
 
 <PageTitle>Houston Mesh - Home</PageTitle>
 
-<h3>Welcome to the Houston Mesh Site!</h3>
-
-<div class="card mb-3">
-    <div class="card-body">
-        <h4 class="card-title"></h4>
-        <h6 class="card-subtitle mb-2 text-muted">Site work currently in-progress...</h6>
-        <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.
-        </p>
-        <p class="card-text">
-            Sed risus ultricies tristique nulla aliquet enim. Adipiscing diam donec adipiscing tristique risus nec feugiat. Id diam maecenas ultricies mi eget mauris. Mi bibendum neque egestas congue quisque. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Mattis enim ut tellus elementum sagittis vitae et leo. Habitasse platea dictumst vestibulum rhoncus est. Accumsan sit amet nulla facilisi. Sollicitudin aliquam ultrices sagittis orci. Dolor magna eget est lorem ipsum dolor. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Nulla aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Consectetur a erat nam at lectus urna duis convallis convallis. Nulla pellentesque dignissim enim sit amet venenatis urna.
-        </p>
+<div class="row">
+    <div class="col-xl-6">
+        <div class="card text-white bg-dark mb-3">
+            <div class="card-body">
+                <h4 class="card-title">Welcome to the Houston Mesh Radio Site!</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-6">
+        <ul>
+            <li>What is it?</li>
+            <li>Uses</li>
+            <li>MQTT, a stepping stone to keep people from turning off their hardware</li>
+        </ul>
     </div>
 </div>
 
