--- a/HoustonMesh.UI/Components/Layout/NavMenu.razor
+++ b/HoustonMesh.UI/Components/Layout/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿<nav class="navbar navbar-expand-sm bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
+        <img id="top_logo" src="images/houston_mesh_dark.svg" alt="HM logo" />
         <NavLink class="navbar-brand" href="">
             Houston Mesh
         </NavLink>
