--- a/HoustonMesh.UI/Components/Layout/NavMenu.razor
+++ b/HoustonMesh.UI/Components/Layout/NavMenu.razor
@@ -1,8 +1,7 @@
 ﻿<nav class="navbar navbar-expand-sm bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
-        <img id="top_logo" src="images/houston_mesh_dark.svg" alt="HM logo" />
         <NavLink class="navbar-brand" href="">
-            Houston Mesh
+            <img id="top_logo" src="images/houston_mesh_dark.svg" alt="HM logo" /><i>Houston Mesh</i>
         </NavLink>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
