--- a/HoustonMesh.UI/Components/Pages/Home.razor
+++ b/HoustonMesh.UI/Components/Pages/Home.razor
@@ -3,23 +3,43 @@
 <PageTitle>Houston Mesh - Home</PageTitle>
 
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-8">
         <div class="card text-white bg-dark mb-3">
             <div class="card-body">
-                <h4 class="card-title text-center">Welcome to the Houston Mesh Radio Site!</h4>
-                <img src="images/houston_mesh_orange.svg" alt="HM logo" class="float-end" style="width: 50%;" />
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla. At tempor commodo ullamcorper a lacus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Dui faucibus in ornare quam viverra orci sagittis eu. Eu lobortis elementum nibh tellus molestie nunc non blandit. Elementum nisi quis eleifend quam adipiscing vitae proin. Arcu non sodales neque sodales ut etiam sit amet nisl. Eu volutpat odio facilisis mauris sit amet massa vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Imperdiet proin fermentum leo vel orci porta non. Duis ut diam quam nulla porttitor massa id neque aliquam. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Enim praesent elementum facilisis leo vel fringilla est ullamcorper eget. Elit sed vulputate mi sit amet mauris commodo quis imperdiet.</p>
+                <h4 class="card-title text-center">Welcome to the Houston LoRa Mesh Radio Site!</h4>
+                <p class="card-subtitle mb-1">What is LoRa radio?</p>
+                <img src="images/houston_mesh_orange.svg" alt="HM logo" class="float-end" style="width: 200px;" />
+                <p class="card-text text-muted"><a target="_blank" href="https://en.wikipedia.org/wiki/LoRa">LoRa</a>, short for "Long Range," is a cutting-edge wireless communication technology designed to send and receive small amounts of data over long distances using very low power. This technology is particularly useful for connecting devices that need to operate on battery power for extended periods without requiring frequent recharges.</p>
+                <p class="card-subtitle mb-1">How Does LoRa Work?</p>
+                <p class="card-text text-muted">LoRa utilizes a method known as "Chirp Spread Spectrum" (CSS) which is similar to the chirping sounds made by birds. This method spreads the transmission over a wide range of frequencies, which makes LoRa highly resistant to interference and allows signals to reach further, even through buildings or underground. This capability makes it an excellent choice for various applications, from agricultural sensors in remote fields to smart meters inside concrete buildings.</p>
+                <p class="card-subtitle">Key Features of LoRa Technology</p>
+                <p class="card-texttext-muted">
+                    <ul class="text-muted">
+                        <li><strong>Long Range Communication:</strong> LoRa can communicate over distances of up to 15-20 kilometers in rural areas and 5 kilometers in urban settings, making it ideal for sprawling, geographically dispersed networks.</li>
+                        <li><strong>Low Power Usage:</strong> Devices using LoRa technology can run for years on a single battery charge due to its low power requirements. This is particularly beneficial for IoT (Internet of Things) applications where devices are often placed in locations where power sources are not readily available.</li>
+                        <li><strong>Low Cost:</strong> LoRa technology is affordable and can be used in a wide range of applications.</li>
+                        <li><strong>High Network Capacity:</strong> LoRa networks can support millions of messages from thousands of devices, making it scalable for widespread IoT deployments.</li>
+                        <li><strong>Enhanced Security:</strong> LoRa includes built-in encryption features such as AES-128, ensuring that data transmitted across the network is secure from eavesdropping and tampering.</li>
+                    </ul>
+                </p>
+                <p class="card-subtitle mb-1">What can LoRa be used for?</p>
+                <p class="card-text text-muted">
+                    LoRa is versatile and can be used in a multitude of applications including:
+                    <ul class="text-muted">
+                        <li><strong>Smart Cities:</strong> For managing street lights, parking meters, or waste management systems efficiently.</li>
+                        <li><strong>Agriculture:</strong> For monitoring crop and soil conditions remotely.</li>
+                        <li><strong>Energy Management:</strong> For tracking energy usage through smart meters and managing resources more effectively.</li>
+                        <li><strong>Wildlife Tracking:</strong> For studying animal behaviors without disturbing them.</li>
+                    </ul>
+                </p>
+                <p class="card-subtitle mb-1">What is a mesh network?</p>
+                <p class="card-text text-muted">A <a target="_blank" href="https://en.wikipedia.org/wiki/Mesh_networking">mesh network</a> is a sophisticated type of network setup that allows for extensive and reliable connectivity across a large area, such as a home, office, or even an entire city. Unlike traditional networks that rely on a single central router, mesh networks consist of multiple interconnected nodes or points that work together to provide seamless internet coverage.</p>
+                <p class="card-subtitle mb-1">How Does a Mesh Network Work?</p>
+                <p class="card-text text-muted">In a mesh network, each node acts both as a receiver and a transmitter of data. This means that each node can communicate directly with its neighboring nodes, creating a web-like structure of interconnected devices. When data is sent across the network, it can take any of several possible paths to reach its destination, hopping from one node to another until it arrives. This flexibility allows the network to be highly resilient and efficient, as the data can reroute itself around any nodes that might be malfunctioning or overloaded.</p>
+                <p class="card-subtitle mb-1">How does MQTT help LoRa mesh networks?</p>
+                <p class="card-text text-muted"><a target="_blank" href="https://en.wikipedia.org/wiki/MQTT">MQTT</a> is a lightweight messaging protocol that provides resource-constrained network clients with a simple way to distribute telemetry information. It is designed to be an efficient, lightweight, and easy-to-implement publish/subscribe messaging protocol ideal for IoT applications.</p>
             </div>
         </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xl-6">
-        <ul>
-            <li>What is it?</li>
-            <li>Uses</li>
-            <li>MQTT, a stepping stone to keep people from turning off their hardware</li>
-        </ul>
     </div>
 </div>
 
