--- a/HoustonMesh.UI/Components/Pages/Setup.razor
+++ b/HoustonMesh.UI/Components/Pages/Setup.razor
@@ -7,7 +7,7 @@
         <div class="card text-white bg-dark mb-3">
             <div class="card-header">Houston Mesh MQTT Channel Setup</div>
             <div class="card-body">
-                <h4 class="card-title"></h4>
+                <h4 class="card-title">Site work in-progress...</h4>
                 <p class="card-text">You can use these instructions to join the Houston Mesh MQTT Channel, for now:</p>
                 <a href="https://meshtastic.discourse.group/t/anyone-in-houston-tx/7614/62" target="_blank" class="card-link">Meshtastic MQTT Channel Setup Instructions</a>
             </div>
